--- a/.babelrc.json
+++ b/.babelrc.json
@@ -1,7 +1,11 @@
 {
 	"presets": [
 		["@babel/preset-env", {
-			"targets": "last 2 Chrome versions, last 2 Safari versions, last 2 ChromeAndroid versions, last 2 iOS versions, last 2 Firefox versions, last 2 Edge versions",
+			"targets":
+			{
+				"browsers": ["last 2 versions", "ie == 11"]
+			}
+		,
 			"corejs": 3,
 			"useBuiltIns": "usage",
 			"bugfixes": true,
