--- a/.babelrc.json
+++ b/.babelrc.json
@@ -3,7 +3,7 @@
 		["@babel/preset-env", {
 			"targets":
 			{
-				"browsers": ["last 2 versions", "ie == 11"]
+				"browsers": ["last 2 versions", "IE 10"]
 			}
 		,
 			"corejs": 3,
